[package]
name = "cellular_textures"
version = "0.1.0"
edition = "2021"
description = "Generate cellular texture grayscale images."
license = "Unlicense"

[[bin]]
name = "ctext"
path = "src/main.rs"

[dependencies]
kd-tree = "0.6.0"
typenum ="1.17.0"
rand = "0.8.5"
clap = {version = "4.5.20", features = ["derive"]}
image = "0.25.4"
criterion = "0.5.1"

[[bench]]
name = "generate_texture"
harness = false
